# utair_test

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
tests/: test_calculate.py
